# Dump-Truck

./: .gitignore  01_pydantic.ipynb  02_groq.ipynb  03_langchain_doc_loaders.ipynb  pyproject.toml  requirements.txt
clash-of-clans-agent/: clash_tools.py  coc_agent.ipynb  coc_tools_func.ipynb
clash-of-clans-agent/studio/: coc_agent.py  langgraph.json
langchain-ac/: .gitignore  requirements.txt
langchain-ac/m-0/: basics.ipynb
langchain-ac/m-1/: chain.ipynb  simple-graph.ipynb
langchain-ac/m-1/studio/: agent.py  router.py
langchain-ac/m-2/: chatbot-external-memory.ipynb  chatbot-summarization.ipynb  state-schema.ipynb
langchain-ac/m-2/state_db/: example.db-shm  example.db-wal
langchain-ac/m-3/: breakpoints.ipynb  dynamic-breakpoints.ipynb  streaming-interruption.ipynb
langchain-ac/m-3/studio/: agent.py
langchain-ac/m-4/: map-reduce.ipynb  parallelization.ipynb  research-assistant.ipynb  sub-graph.ipynb  sub-graph.md
langchain-ac/m-4/studio/: map_reduce.py  parallelization.py  research_assistant.py
langchain-ac/module-1/: agent.ipynb  router.ipynb  simple-graph.ipynb
langchain-ac/module-1/studio/: langgraph.json  requirements.txt
langchain-ac/module-1/studio/.langgraph_api/: .langgraph_ops.pckl
langchain-ac/module-2/: multiple-schemas.ipynb  state-schema.ipynb  trim-filter-messages.ipynb
langgraph-deep-research/notebooks/: 1_scoping.ipynb
langgraph-sql-agent/: db_load.ipynb  sql_agent.ipynb
last-fm-spotify-agent/: lastfm_spotify_agent.ipynb  lastfm_spotify_tools.py  lastfm_spotify_tools_func.ipynb
last-fm-spotify-agent/studio/: langgraph.json  lastfm_spotify_agent.py  lastfm_spotify_tools.py  requirements.txt
minimax-exp/: minimax.ipynb
pds/: LL.ipynb  LL_middle_node.ipynb
sq-ml/: sq-ml-2.ipynb  sq-ml-ch1.ipynb  sq-ml-ch2.ipynb  sq-ml-ch3.ipynb
sq-ml/toy-dataset/: simple_data.csv
