[project]
name = "dump-truck"
version = "0.1.0"
description = "This is dumping ground!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-otel>=0.11.0",
    "arize-phoenix-otel>=0.14.0",
    "arxiv>=2.3.1",
    "bs4>=0.0.2",
    "ipykernel>=7.1.0",
    "langchain>=1.1.0",
    "langchain-anthropic>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-deepseek>=1.0.1",
    "langchain-google-genai>=3.2.0",
    "langchain-groq>=1.1.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.0",
    "langchain-tavily>=0.2.13",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.4",
    "langgraph-api==0.5.36",
    "langgraph-checkpoint-postgres>=3.0.2",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langgraph-cli[inmem]>=0.4.7",
    "langgraph-prebuilt>=1.0.5",
    "langgraph-sdk>=0.2.10",
    "langsmith>=0.4.48",
    "matplotlib>=3.10.8",
    "notebook>=7.5.0",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "openinference-instrumentation-langchain>=0.1.56",
    "opentelemetry-exporter-otlp>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic>=2.12.4",
    "pymupdf>=1.26.6",
    "pypdf>=6.4.0",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.7",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.45",
    "trustcall>=0.0.39",
]
